add /apis.json and (re)add .../versions.json paths

--- a/qqq-middleware-api/src/main/resources/rapidoc/rapidoc-container.html
+++ b/qqq-middleware-api/src/main/resources/rapidoc/rapidoc-container.html
@@ -31,7 +31,7 @@
 <body>
 <rapi-doc
         id="the-rapi-doc"
-        spec-url="/api/{version}/openapi.json"
+        spec-url="{spec-url}"
         regular-font="Roboto,Helvetica,Arial,sans-serif"
         mono-font="Monaco, Menlo, Consolas, source-code-pro, monospace"
         font-size="large"
