more flexible (app-defined) security schemes;

--- a/qqq-middleware-api/src/main/resources/rapidoc/rapidoc-container.html
+++ b/qqq-middleware-api/src/main/resources/rapidoc/rapidoc-container.html
@@ -39,6 +39,7 @@
         allow-spec-file-download="true"
         primary-color="{primaryColor}"
         sort-endpoints-by="method"
+        allow-authentication="true"
         persist-auth="true"
         render-style="focused"
         show-method-in-nav-bar="as-colored-block"
@@ -46,6 +47,7 @@
         css-file="qqq-api-styles.css"
         css-classes="qqqApi"
         info-description-headings-in-navbar="true"
+        show-curl-before-try="true"
 >
    {navLogoImg}
    <div slot="overview" id="otherVersions">
