Hide other-versions dropdown while page is loading

--- a/qqq-middleware-api/src/main/resources/rapidoc/rapidoc-container.html
+++ b/qqq-middleware-api/src/main/resources/rapidoc/rapidoc-container.html
@@ -75,6 +75,12 @@
             collapseButton.click();
          }
 
+         const otherVersions = document.querySelector("#otherVersions");
+         if(otherVersions)
+         {
+            otherVersions.style.visibility = "visible";
+         }
+
          const navLogo = document.querySelector("#navLogo");
          if(navLogo)
          {
