Checkpoint, WIP on processes in api - mostly done

--- a/qqq-middleware-api/src/main/resources/rapidoc/rapidoc-container.html
+++ b/qqq-middleware-api/src/main/resources/rapidoc/rapidoc-container.html
@@ -38,7 +38,7 @@
         show-header="false"
         allow-spec-file-download="true"
         primary-color="{primaryColor}"
-        sort-endpoints-by="method"
+        sort-endpoints-by="none"
         allow-authentication="true"
         persist-auth="true"
         render-style="focused"
