Update font to add SF Pro Display first

--- a/qqq-middleware-api/src/main/resources/rapidoc/rapidoc-container.html
+++ b/qqq-middleware-api/src/main/resources/rapidoc/rapidoc-container.html
@@ -32,7 +32,7 @@
 <rapi-doc
         id="the-rapi-doc"
         spec-url="{spec-url}"
-        regular-font="Roboto,Helvetica,Arial,sans-serif"
+        regular-font="SF Pro Display,Roboto,Helvetica,Arial,sans-serif"
         mono-font="Monaco, Menlo, Consolas, source-code-pro, monospace"
         font-size="large"
         show-header="false"
